--- a/Templates/couverture/couverture.html
+++ b/Templates/couverture/couverture.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #4CAF50, #81C784);
+            background-color: red;
             color: white;
         }
         .container {
@@ -34,7 +34,7 @@
         .btn {
             padding: 10px 20px;
             font-size: 1rem;
-            color: white;
+            color: bleu;
             background-color: #2196F3;
             border: none;
             border-radius: 5px;
