--- a/Templates/base.html
+++ b/Templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}"> -->
     <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <script src="{% static 'jquery-3.7.0.min.js' %}"></script>
     <script src="{% static 'script.js' %}"></script>
