--- a/Templates/base.html
+++ b/Templates/base.html
@@ -38,6 +38,35 @@
         margin-right: 10px;
         margin-left: 10px;
     }
+
+    @media screen and (max-width: 768px) {
+    body {
+        font-size: 16px;
+    }
+
+    i, .icon {
+        font-size: 20px;
+    }
+
+    .container {
+        width: 95%;
+    }
+}
+
+    @media screen and (max-width: 480px) {
+    body {
+        font-size: 14px;
+    }
+
+    i, .icon {
+        font-size: 18px;
+    }
+
+    .container {
+        width: 100%;
+        padding: 10px;
+    }
+}
 </style>
 
 <body>
