--- a/Templates/couverture/dashboard.html
+++ b/Templates/couverture/dashboard.html
@@ -8,8 +8,8 @@
 
     <div class="card" onclick="window.location.href='{% url 'classe' %}'">
         <div>
-            <div class="numbers">CC</div>
-            <div class="cardName">Saisir des Notes</div>
+            <div class="numbers"><h3>CC<h3></div>
+            <div class="cardName"><h5>Saisir des Notes<h5></div>
         </div>
         <div class="iconBx">
             <span class="icon fas fa-book"></span>
