--- a/Templates/base.html
+++ b/Templates/base.html
@@ -48,7 +48,7 @@
         font-size: 20px;
     }
 
-    .container {
+    .containers {
         width: 95%;
     }
 }
@@ -62,7 +62,7 @@
         font-size: 18px;
     }
 
-    .container {
+    .containers {
         width: 100%;
         padding: 10px;
     }
