--- a/Templates/base.html
+++ b/Templates/base.html
@@ -43,6 +43,10 @@
     body {
         font-size: 16px;
     }
+    navigations{
+        width: 50%;
+        font-size: 20px;
+    }
 
     i, .icon {
         font-size: 20px;
@@ -56,6 +60,11 @@
 
     i, .icon {
         font-size: 18px;
+    }
+        
+    navigations{
+        width: 50%;
+        font-size: 20px;
     }
 
     .containers {
